--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-<title>CLOUDCLASS JENKINS CICD PIPELINE</title>
-<body>
-<h1>Welcome to Jenkins by TJ</h1>
-</body>
+  <head>
+    <title>Server Hello World: Static Website</title>
+  </head>
+  <body>
+    <h1>Happy Coding</h1>
+    <p>Hello world!</p>
+  </body>
 </html>
