--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Server Hello World: Static Website</title>
+    <title>TJ Website</title>
   </head>
   <body>
     <h1>Happy Coding</h1>
